--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,10 +14,10 @@
     <figure>
         <img src="https://avatars3.githubusercontent.com/u/15958401?s=460&v=4" width="229" height="230">
         <figcaption>Developed by: <a href="https://github.com/Jordan141" target="_blank">Jordan Moss</a></figcaption>
-        <a href=""><i class="fa fa-codepen"></i></a>
-        <a href=""><i class="fa fa-twitter"></i></a>
-        <a href=""><i class="fa fa-github"></i></a>
-        <a href=""><i class="fa fa-linkedin"></i></a>
+        <a href="https://codepen.io/Jordan141/"><i class="fa fa-codepen"></i></a>
+        <a href="https://twitter.com/JordanMoss52"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/Jordan141"><i class="fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/jmoss41/"><i class="fa fa-linkedin"></i></a>
     </figure>
     <h2>URL Shortener Microservice</h2>
     <form action="/" method="POST">
@@ -28,7 +28,7 @@
             <h6 class="errorMessage">Error: <%= error %></h6>
         <% } %>
         <%if(link){ %>
-            <h6 class="linkMessage">Your link is - <%= link %></h6>
+            <h6 class="linkMessage">Your link is: <%= link %></h6>
         <% } %>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
